# rust-minimal-api

./: Cargo.toml  README.md
migrations/2019-10-15-113531_heroes/: up.sql
migrations/2019-10-15-115045_create_heroes/: up.sql
src/: .env  db.rs  hero.rs  main.rs
