[package]
name = "hero-api"
version = "0.1.0"
authors = ["Bruce Herve <hernino25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
rocket_codegen = "0.4.2"
rocket_contrib = "0.4.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
r2d2-diesel = "1.0"
r2d2 = "0.8.5"
diesel = { version = "1.3.3", features = ["r2d2","postgres"] }
dotenv = "0.14.1"
 


